--- a/src/components/IntegratedSwatches.module.css
+++ b/src/components/IntegratedSwatches.module.css
@@ -4,13 +4,27 @@
   position: relative;
 }
 
+.ctn_colorinfo {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 100%;
+  padding-inline: var(--size-4);
+  display: grid;
+  place-items: center;
+  user-select: none;
+  /* place-content: center; */
+  z-index: -1;
+  transform: translateY(-50%);
+}
+
 .floating_info {
   position: absolute;
   inset: var(--size-2) 0;
   z-index: -1;
   height: max-content;
   margin-inline: var(--size-4);
-  background-color: hsl(var(--gray-1-hsl) / 30%);
+  background-color: hsl(var(--gray-1-hsl) / 50%);
   display: flex;
   flex-direction: column;
   align-items: stretch;
@@ -28,6 +42,7 @@
 .floating_info input[type='range']::-webkit-slider-runnable-track {
   background: var(--grad);
   border-radius: var(--radius-3);
+  border: 1px solid var(--gray-4);
 }
 
 .floating_info input[type='range']::-webkit-slider-thumb {
