--- a/src/components/ExternalSwatches.module.css
+++ b/src/components/ExternalSwatches.module.css
@@ -35,7 +35,8 @@
 
 .form_control
   input[type='range']:focus::-webkit-slider-runnable-track {
-  box-shadow: var(--shadow-6);
+  box-shadow: var(--shadow-6),
+    -5px -3px 9px 0px hsl(var(--current-hsl-raw) / 30%);
 }
 
 .form_control input[type='range']::-webkit-slider-thumb {
